--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Service Worker Precache Test</title>
     <link rel="stylesheet" href="css/main.css">
+
+    <link rel="site" href="site.webmanifest">
   </head>
 
   <body>
