--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Service Worker Precache Test</title>
     <link rel="stylesheet" href="css/main.css">
 
-    <link rel="site" href="site.webmanifest">
+    <link rel="site" href="/member-area/site.webmanifest">
   </head>
 
   <body>
@@ -16,32 +16,12 @@
     
     
     <script>
-      function sendMessage(message) {
-        return new Promise(function(resolve, reject) {
-          if (navigator.serviceWorker.controller) {
-            var messageChannel = new MessageChannel();
-            messageChannel.port1.onmessage = function (event) {
-              if (event.data.error) {
-                reject(event.data.error);
-              } else {
-                resolve(event.data);
-              }
-            };
-
-            navigator.serviceWorker.controller.postMessage(message, [messageChannel.port2]);
-          } else {
-            reject("This page isn't currently controlled by a service worker. Please reload and try again.");
-          }
-        });
+    if (navigator.serviceWorker) {
+        navigator.serviceWorker.register (
+          '/member-area/service-worker-registration.js',
+          {scope: '/member-area/'}
+        )
       }
-
-      document.querySelector('#clear-cache').addEventListener('click', function() {
-        sendMessage({command: 'delete_all'}).then(function() {
-          console.log('All caches deleted.');
-        }).catch(function(error) {
-          console.error('Caches not deleted:', error);
-        });
-      });
     </script>
   </body>
 </html>
