--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Service Worker Precache Test</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="canonical" href="https://ssesayjr.github.io/member-area" />
+    <link rel="canonical" href="https://ssesayjr.github.io/member-area/" />
 
-    <link rel="site" href="/site.webmanifest">
+    <link rel="site" href="site.webmanifest">
   </head>
 
   <body>
@@ -18,7 +18,7 @@
     <script>
   
         if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js');
+    navigator.serviceWorker.register('service-worker.js');
             }
       
     </script>
