--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
-    navigator.serviceWorker.register('/service-worker.js');
+    navigator.serviceWorker.register('service-worker.js');
     });
 }
     </script>
