--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://ssesayjr.github.io/member-area/" />
 
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="manifest" href="/member-area/site.webmanifest">
   </head>
 
   <body>
@@ -19,7 +19,7 @@
   
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
-    navigator.serviceWorker.register('service-worker.js', {scope: './'});
+    navigator.serviceWorker.register('/member-area/service-worker.js', {scope: '/member-area/'});
     });
 }
     </script>
