--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,17 @@
   
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
-    navigator.serviceWorker.register('/member-area/public/service-worker.js', {scope: '/member-area/'});
+    navigator.serviceWorker.register('/member-area/public/service-worker.js', {scope: '/member-area/public/'});
     });
 }
+
+document.querySelector('#show').addEventListener('click', () => {
+  const iconUrl = document.querySelector('select').selectedOptions[0].value;
+  let imgElement = document.createElement('img');
+  imgElement.src = iconUrl;
+  document.querySelector('#container').appendChild(imgElement);
+});
+
     </script>
       <script src="js/config/config.js"></script>
       <script src="js/authState.js"></script>
