--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       <script src="js/register.js"></script>
       <script src="js/sendVerification.js"></script>
       <script src="lib/noty/noty.js"></script>
-      <script src="service-worker-registration.js"></script>
+      <script src="service-worker.js"></script>
 
 
 
