--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Service Worker Precache Test</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="canonical" href="https://ssesayjr.github.io/member-area/public/" />
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="canonical" href="/https://ssesayjr.github.io/member-area/public/" />
 
     <link rel="manifest" href="/member-area/public/site.webmanifest">
   </head>
@@ -13,19 +13,19 @@
 
     <h1>GitHub page as PWA template</h1>
     <div class="container">
-      <input id="emailField" type="email" placeholder="Email">
+      <input id="email_field" class="login-box.user-box input" placeholder="Email">
   
-      <input id="passwordField" type="password" placeholder="Passwort">
+      <input id="password_field" class="login-box.user-box input" placeholder="Password">
   
-      <button id="btnLogin" class="login-box.user-box">
+      <button id="login" class="button .login-box">
           Login
       </button>
   
-      <button id="btnSignUp" class="btn btn-action">
+      <button id="register" class="button">
           Registrieren
       </button>
   
-      <button id="btnLogout" class="btn btn-action hide">
+      <button id="logout" class="button">
           Logout
       </button>
   </div>
