--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   </div>
     
     
-    <!-- <script>
+    <script>
   
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
@@ -39,7 +39,7 @@
     });
 }
 
-    </script> -->
+    </script>
       <script src="js/config/config.js"></script>
       <script src="js/authState.js"></script>
       <script src="js/login.js"></script>
