--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
 
   <body>
 
+    
     <h1>GitHub page as PWA template</h1>
+
+    <div id="root"></div>
     <div class="container">
       <input id="email_field" class="login-box.user-box input" placeholder="Email">
   
