--- a/public/index_custom.html
+++ b/public/index_custom.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Service Worker Precache Test</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="canonical" href="/https://ssesayjr.github.io/member-area/public/" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="canonical" href="https://ssesayjr.github.io/member-area/public/" />
 
-    <link rel="manifest" href="/member-area/public/site.webmanifest">
+    <link rel="manifest" href="member-area/public/site.webmanifest">
   </head>
 
   <body>
