--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://ssesayjr.github.io/member-area/public/" />
 
-    <link rel="manifest" href="member-area/public/site.webmanifest">
+    <link rel="manifest" href="site.webmanifest">
   </head>
 
   <body>
@@ -14,7 +14,6 @@
     
     <h1>GitHub page as PWA template</h1>
 
-    <div id="root"></div>
     <div class="container">
       <input id="email_field" class="login-box.user-box input" placeholder="Email">
   
