--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,8 @@
     </script>
 
 
-<script src="/__/firebase/9.16.0/firebase-app-compat.js"></script>
-<script src="/__/firebase/9.16.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-auth-compat.js"></script>
 
     <!-- include only the Firebase features as you need -->
 
